fixing overflow

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -33,7 +33,7 @@ $lg: 1200px;
   /* CSS rules for extra large devices here */
 }
 
-body, main{
+main{
     overflow-x: hidden !important;
 }
 
